@@ -1,3 +1,8 @@
+2016-07-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/stm8/memcpy.s:
+	  Improve stm8 memcpy().
+
 2016-07-14 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/stm8/memcpy.s:
